<?xml version="1.0" encoding="UTF-8"?>
<!--
~ Licensed to the Apache Software Foundation (ASF) under one
~ or more contributor license agreements.  See the NOTICE file
~ distributed with this work for additional information
~ regarding copyright ownership. The ASF licenses this file
~ to you under the Apache License, Version 2.0 (the
~ "License"); you may not use this file except in compliance
~ with the License. You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>au.net.zeus.jgdms</groupId>
        <artifactId>jfr-telemetry</artifactId>
        <version>3.1.1-SNAPSHOT</version>
    </parent>

    <groupId>au.net.zeus.jgdms.jfr</groupId>
    <artifactId>jfr-telemetry-service</artifactId>
    <packaging>jar</packaging>

    <name>Module :: JFR Telemetry Service Implementation</name>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>au.net.zeus.jgdms.jfr</groupId>
            <artifactId>jfr-telemetry-dl</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>au.net.zeus.jgdms</groupId>
            <artifactId>jgdms-service-support</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>au.net.zeus.jgdms</groupId>
            <artifactId>jgdms-platform</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>au.net.zeus.jgdms</groupId>
            <artifactId>jgdms-lib</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>au.net.zeus.jgdms</groupId>
            <artifactId>jgdms-activation</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>biz.aQute.bnd</groupId>
                <artifactId>bnd-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>bnd-process</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <configuration>
                    <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
